# network_analyzer

./: .gitignore  Cargo.toml
src/: main.rs
src/controllers/: device_controller.rs  filter_controller.rs  mod.rs  operation_controller.rs
src/enums/: protocol.rs
src/filters/: destination_filter.rs  mod.rs  protocol_filter.rs  source_filter.rs
src/models/: analyzed_data.rs  analyzed_traffic.rs  mod.rs
src/operations/: clear_collected_packets_operation.rs  configure_filters_operation.rs  exit_program_operation.rs  mod.rs  select_device_operation.rs  start_sniffing_operation.rs  traffic_analysis_operation.rs  view_packets_operation.rs
src/protocols/: arp.rs  ethernet.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  udp.rs
src/services/: analyzer.rs  mod.rs  packet_viewer.rs  runner.rs  sniffer.rs
src/traits/: mod.rs  packet_analysis.rs  packet_filter.rs  runner_operation.rs
src/utils/: index_util.rs  input_util.rs  mod.rs  protocol_util.rs
