[package]
name = "network_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.1.0"
pnet = "0.34.0"
chrono = "0.4.32"
tokio = { version="1.25.0", features=["full"] }
strum = "0.25"
strum_macros = "0.25"

